# TEA_S-curit-

./: README.md  Rapport.odt  TODO.txt
src/: CMakeLists.txt  Main.c  Mediaplayer.c  Utils_OrderResolve.c  Utils_PI.c  Utils_Primes.c  Utils_SolveLinear.c
